# daily-idea-bot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/: analyzer.py  bot.py  main.py  scraper.py
